--- a/EasyLib/app/src/main/res/layout/login.xml
+++ b/EasyLib/app/src/main/res/layout/login.xml
@@ -9,45 +9,86 @@
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
+        android:layout_marginBottom="10dp"
         android:ems="10"
         android:fontFamily="serif"
         android:hint="Username"
         android:inputType="textPersonName"
         android:singleLine="true"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/password" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         android:ems="10"
         android:fontFamily="serif"
         android:hint="Password"
         android:inputType="textPassword"
         android:singleLine="true"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toTopOf="@+id/register_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.242"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/login-bt"
+        android:id="@+id/login-button"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="65dp"
         android:layout_height="94dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginBottom="50dp"
         android:backgroundTint="@android:color/white"
+        android:onClick="login"
         android:text="Login"
         android:textColor="@android:color/black"
+        app:layout_constraintBottom_toTopOf="@+id/register_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/username"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/username" />
+
+    <Button
+        android:id="@+id/register_button"
+        android:layout_width="156dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="100dp"
+        android:backgroundTint="@android:color/white"
+        android:onClick="register"
+        android:text="Register"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/google_button"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/fb_button" />
+
+    <ImageButton
+        android:id="@+id/fb_button"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="95dp"
+        android:backgroundTint="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/register_button"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/fb_icon" />
+
+    <ImageButton
+        android:id="@+id/google_button"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="95dp"
+        android:backgroundTint="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/register_button"
+        app:srcCompat="@drawable/google_icon" />
 
 </android.support.constraint.ConstraintLayout>
