Some fixes on Login Layout

--- a/EasyLib/app/src/main/res/layout-normal/login.xml
+++ b/EasyLib/app/src/main/res/layout-normal/login.xml
@@ -11,11 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:ems="10"
-        android:fontFamily="serif"
         android:hint="Username"
         android:inputType="textPersonName"
         android:singleLine="true"
-        android:textColor="@android:color/black"
+        android:textColorHint="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="@+id/password" />
@@ -28,6 +27,7 @@
         android:ems="10"
         android:fontFamily="serif"
         android:hint="Password"
+        android:textColorHint="@android:color/darker_gray"
         android:inputType="textPassword"
         android:singleLine="true"
         android:textColor="@android:color/black"
@@ -43,7 +43,7 @@
         android:layout_height="94dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="50dp"
-        android:backgroundTint="@android:color/white"
+        android:backgroundTint="@android:color/darker_gray"
         android:onClick="login"
         android:text="Login"
         android:textColor="@android:color/black"
@@ -57,7 +57,7 @@
         android:layout_width="156dp"
         android:layout_height="64dp"
         android:layout_marginBottom="60dp"
-        android:backgroundTint="@android:color/white"
+        android:backgroundTint="@android:color/darker_gray"
         android:onClick="register"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
