--- a/EasyLib_Librarian/app/src/main/res/layout-large/login.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-large/login.xml
@@ -11,83 +11,93 @@
         android:id="@+id/fb_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/transparent"
         android:onClick="loginFb"
-        app:layout_constraintBottom_toTopOf="@+id/g_bt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.552"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:srcCompat="@drawable/fb_icon" />
 
     <ImageButton
         android:id="@+id/g_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="53dp"
+        android:layout_marginTop="15dp"
         android:background="@android:color/transparent"
         android:onClick="loginGoogle"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fb_bt"
         app:srcCompat="@drawable/g_icon" />
 
     <ImageButton
         android:id="@+id/login_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="22dp"
         android:background="@android:color/transparent"
         android:onClick="login"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
         app:srcCompat="@drawable/login_bt" />
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="210dp"
-        android:layout_height="40dp"
+        android:layout_width="260dp"
+        android:layout_height="50dp"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@android:color/white"
         android:ems="10"
         android:hint="Username"
-        android:textColorHint="@android:color/white"
-        android:backgroundTint="@android:color/white"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/password"
+        android:textColorHint="@android:color/white"
+        android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/login_bt"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="210dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="22dp"
+        android:layout_width="260dp"
+        android:layout_height="50dp"
+        android:backgroundTint="@android:color/white"
         android:ems="10"
         android:hint="Password"
-        android:textColorHint="@android:color/white"
-        android:backgroundTint="@android:color/white"
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/username" />
+        android:textColorHint="@android:color/white"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/username"
+        app:layout_constraintTop_toBottomOf="@+id/username" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="37dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="17dp"
-        app:layout_constraintBottom_toTopOf="@+id/fb_bt"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.58"
+        app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password"
         app:srcCompat="@drawable/or_string" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.45" />
 
 </android.support.constraint.ConstraintLayout>
