Edit username and password hint in gray

--- a/EasyLib_Librarian/app/src/main/res/layout-normal/login.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-normal/login.xml
@@ -58,7 +58,7 @@
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
+        android:textColorHint="@android:color/darker_gray"
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/login_bt"
         app:layout_constraintHorizontal_bias="0.61"
@@ -75,7 +75,7 @@
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
+        android:textColorHint="@android:color/darker_gray"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@+id/username"
         app:layout_constraintTop_toBottomOf="@+id/username" />
