--- a/EasyLib_Librarian/app/src/main/res/layout-xlarge/login.xml
+++ b/EasyLib_Librarian/app/src/main/res/layout-xlarge/login.xml
@@ -65,7 +65,7 @@
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
+        android:textColorHint="@android:color/darker_gray"
         android:textSize="36sp"
         app:layout_constraintEnd_toStartOf="@+id/login_bt"
         app:layout_constraintHorizontal_bias="0.62"
@@ -83,7 +83,7 @@
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
+        android:textColorHint="@android:color/darker_gray"
         android:textSize="36sp"
         app:layout_constraintStart_toStartOf="@+id/username"
         app:layout_constraintTop_toBottomOf="@+id/username" />
