--- a/EasyLib/app/src/main/res/layout-xlarge/login.xml
+++ b/EasyLib/app/src/main/res/layout-xlarge/login.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@android:color/transparent"
+        android:onClick="register"
         android:src="@drawable/sign_in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
