--- a/EasyLib/app/src/main/res/layout-normal/register.xml
+++ b/EasyLib/app/src/main/res/layout-normal/register.xml
@@ -46,6 +46,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/surname" />
 
+    <TextView
+        android:id="@+id/text_error"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:fontFamily="serif"
+        android:text="Fields not filled up"
+        android:textColor="@color/colorAccent"
+        android:textSize="15sp"
+        android:typeface="normal"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/surname"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <EditText
         android:id="@+id/email"
         android:layout_width="240dp"
@@ -98,6 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
         android:background="@android:color/transparent"
+        android:onClick="register"
         android:src="@drawable/ic_reg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
