--- a/EasyLib/app/src/main/res/layout-large/register.xml
+++ b/EasyLib/app/src/main/res/layout-large/register.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".register"
+    tools:context=".login"
     android:background="@drawable/login_back">
 
     <EditText
         android:id="@+id/surname"
-        android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/white"
         android:ems="10"
@@ -21,7 +21,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,8 +29,8 @@
 
     <EditText
         android:id="@+id/name"
-        android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/white"
@@ -40,7 +40,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,10 +50,11 @@
         android:id="@+id/text_error"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="serif"
         android:text="Fields not filled up"
         android:textColor="@color/colorAccent"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:typeface="normal"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/surname"
@@ -63,8 +64,8 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -75,7 +76,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,8 +84,8 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/white"
@@ -94,7 +95,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +112,7 @@
         android:id="@+id/reg_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="34dp"
         android:background="@android:color/transparent"
         android:onClick="register"
         android:src="@drawable/ic_reg"
