--- a/EasyLib/app/src/main/res/layout-xlarge/register.xml
+++ b/EasyLib/app/src/main/res/layout-xlarge/register.xml
@@ -9,10 +9,10 @@
 
     <EditText
         android:id="@+id/surname"
-        android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_width="500dp"
+        android:layout_height="80dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="49dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/white"
         android:ems="10"
@@ -21,7 +21,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="20sp"
+        android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,8 +29,8 @@
 
     <EditText
         android:id="@+id/name"
-        android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_width="500dp"
+        android:layout_height="80dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/white"
@@ -40,7 +40,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="20sp"
+        android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,13 +49,14 @@
     <TextView
         android:id="@+id/text_error"
         android:layout_width="wrap_content"
-        android:layout_height="25dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="13dp"
         android:fontFamily="serif"
         android:text="Fields not filled up"
         android:textColor="@color/colorAccent"
-        android:textSize="15sp"
+        android:textSize="36sp"
         android:typeface="normal"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/surname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
@@ -63,10 +64,10 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_width="500dp"
+        android:layout_height="80dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/white"
         android:ems="10"
@@ -75,7 +76,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="20sp"
+        android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,8 +84,8 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="240dp"
-        android:layout_height="45dp"
+        android:layout_width="500dp"
+        android:layout_height="80dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/white"
@@ -94,7 +95,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="20sp"
+        android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +112,7 @@
         android:id="@+id/reg_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="50dp"
         android:background="@android:color/transparent"
         android:onClick="register"
         android:src="@drawable/ic_reg"
