--- a/EasyLib/app/src/main/res/color/nav_item.xml
+++ b/EasyLib/app/src/main/res/color/nav_item.xml
@@ -2,6 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/colorYellow"
         android:state_checked="true" />
-    <item android:color="@color/colorWhiteTransparent" />
-
+    <item android:color="@android:color/darker_gray" />
 </selector>
