--- a/EasyLib/app/src/main/res/layout/main.xml
+++ b/EasyLib/app/src/main/res/layout/main.xml
@@ -9,13 +9,14 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navbar"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="0dp"
-        app:itemBackground="@android:color/black"
-        app:itemIconSize="31dp"
+        android:paddingRight="12dp"
+        android:paddingLeft="12dp"
+        android:background="@drawable/botnav_back"
+        app:itemBackground="@android:color/transparent"
+        app:itemIconSize="33dp"
         app:itemIconTint="@color/nav_item"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/bottom_nav_items" />
