--- a/EasyLib/app/src/main/res/layout/toolbar_home.xml
+++ b/EasyLib/app/src/main/res/layout/toolbar_home.xml
@@ -23,11 +23,12 @@
 
     <EditText
         android:id="@+id/search_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="30dp"
-        android:layout_weight="0"
+        android:layout_weight="0.35"
         android:background="@color/colorWhite"
         android:ems="10"
         android:fontFamily="serif-monospace"
