--- a/EasyLib/app/src/main/res/layout/toolbar_home.xml
+++ b/EasyLib/app/src/main/res/layout/toolbar_home.xml
@@ -34,6 +34,7 @@
         android:fontFamily="serif-monospace"
         android:hint="Search"
         android:inputType="text"
+        android:imeOptions="actionSearch"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
