Added "x" button on search
when pressed it clears the search_text

--- a/EasyLib/app/src/main/res/layout/toolbar_home.xml
+++ b/EasyLib/app/src/main/res/layout/toolbar_home.xml
@@ -21,29 +21,48 @@
         android:tint="@android:color/white"
         app:srcCompat="@drawable/ic_search" />
 
-    <EditText
-        android:id="@+id/search_text"
+    <LinearLayout
+        android:id="@+id/search_lin_layout"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="25dp"
         android:layout_weight="0.35"
-        android:background="@color/colorWhite"
-        android:ems="10"
-        android:fontFamily="serif-monospace"
-        android:hint="Search"
-        android:inputType="text"
-        android:imeOptions="actionSearch"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:visibility="invisible" />
+        android:orientation="horizontal"
+        android:visibility="invisible">
+
+        <EditText
+            android:id="@+id/search_text"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_weight="0.3"
+            android:background="@color/colorWhite"
+            android:ems="10"
+            android:fontFamily="serif-monospace"
+            android:hint="Search"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <ImageButton
+            android:id="@+id/clear_bt"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:layout_weight="0.1"
+            android:background="@android:color/transparent"
+            android:onClick="clearSearchText"
+            android:scaleType="fitCenter"
+            android:tint="@android:color/darker_gray"
+            app:srcCompat="@android:drawable/ic_delete" />
+    </LinearLayout>
 
     <ImageButton
-        android:id="@+id/notification"
+        android:id="@+id/notification_icon"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="2dp"
