--- a/EasyLib/app/src/main/res/layout-normal/register.xml
+++ b/EasyLib/app/src/main/res/layout-normal/register.xml
@@ -109,11 +109,12 @@
 
     <ImageButton
         android:id="@+id/reg_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_width="250dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="32dp"
         android:background="@android:color/transparent"
         android:onClick="register"
+        android:scaleType="fitXY"
         android:src="@drawable/ic_reg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
