--- a/EasyLib/app/src/main/res/values/colors.xml
+++ b/EasyLib/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorWhite">#ffffff</color>
     <color name="colorWhiteTransparent">#95ffffff</color>
     <color name="colorYellow">#ffd416</color>
+    <color name="colorDarkBlueTransparent">#dc212d42</color>
 </resources>
