--- a/EasyLib/app/src/main/res/layout-xlarge/login.xml
+++ b/EasyLib/app/src/main/res/layout-xlarge/login.xml
@@ -11,16 +11,17 @@
         android:id="@+id/text_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="serif"
         android:text="Fields not filled up"
         android:textColor="@color/colorAccent"
         android:textSize="28sp"
         android:typeface="normal"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/reg_bt2"
@@ -81,7 +82,7 @@
         app:srcCompat="@drawable/login_bt" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/email"
         android:layout_width="440dp"
         android:layout_height="75dp"
         android:layout_marginStart="50dp"
@@ -89,7 +90,7 @@
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/white"
         android:ems="10"
-        android:hint="Username"
+        android:hint="Email"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@android:color/white"
@@ -104,7 +105,6 @@
         android:id="@+id/password"
         android:layout_width="440dp"
         android:layout_height="75dp"
-        android:layout_marginTop="8dp"
         android:backgroundTint="@android:color/white"
         android:ems="10"
         android:hint="Password"
@@ -113,8 +113,8 @@
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="36sp"
-        app:layout_constraintStart_toStartOf="@+id/username"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintStart_toStartOf="@+id/email"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -128,5 +128,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:srcCompat="@drawable/or_string" />
+
+    <ImageView
+        android:id="@+id/prog_image"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/colorDarkBlueTransparent" />
+
+    <ProgressBar
+        android:id="@+id/prog_bar"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:progressDrawable="@color/colorWhite"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.45" />
+
+    <TextView
+        android:id="@+id/prog_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Login"
+        android:textColor="@android:color/white"
+        android:textSize="45sp"
+        android:textStyle="bold|italic"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/prog_bar" />
 
 </android.support.constraint.ConstraintLayout>
