Added elements for "select favourite Library"
- PrefLibAdapter.class for recycleView
- LoginPreference.class for the activity
- activities to show preferences
- Biblo.class for testing

--- a/EasyLib/app/src/main/res/values/colors.xml
+++ b/EasyLib/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#d81b60</color>
 
     <color name="colorWhite">#ffffff</color>
+    <color name="colorDarkWhite">#dadada</color>
     <color name="colorWhiteTransparent">#95ffffff</color>
     <color name="colorYellow">#ffd416</color>
     <color name="colorDarkBlueTransparent">#dc212d42</color>
