Finished login_preference
- updated color
- updated shape

--- a/EasyLib/app/src/main/res/drawable/rect_round_corner.xml
+++ b/EasyLib/app/src/main/res/drawable/rect_round_corner.xml
@@ -5,7 +5,7 @@
     <corners
         android:radius="40dp" />
 
-    <stroke android:color="@color/colorDarkWhite"
+    <stroke android:color="@color/colorGray"
         android:width="5dp"/>
 
     <padding
