--- a/EasyLib/app/src/main/res/values/colors.xml
+++ b/EasyLib/app/src/main/res/values/colors.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#d81b60</color>
 
     <color name="colorWhite">#ffffff</color>
-    <color name="colorDarkWhite">#dadada</color>
     <color name="colorWhiteTransparent">#95ffffff</color>
+    <color name="colorDarkWhite">#dadada</color>
+    <color name="colorGray">#cccccc</color>
+
     <color name="colorYellow">#ffd416</color>
+
     <color name="colorDarkBlueTransparent">#dc212d42</color>
 </resources>
