Removed overScroll Effect + Inserted Transparent color

--- a/EasyLib/app/src/main/res/layout-normal/login_preference.xml
+++ b/EasyLib/app/src/main/res/layout-normal/login_preference.xml
@@ -29,6 +29,8 @@
         android:scrollbars="vertical"
         android:scrollbarThumbVertical="@color/colorGray"
         android:scrollbarSize="4dp"
+        android:overScrollMode="never"
+        android:backgroundTint="@color/Transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
