--- a/EasyLib/app/src/main/res/layout-normal/fragment_queue.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_queue.xml
@@ -29,9 +29,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:clipChildren="true"
-        android:clipToPadding="true"
+        android:overScrollMode="never"
         android:scrollbars="vertical"
+        android:background="@color/Transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
