Implemented Swipe recycle item on fragment_queue
- added class for ItemTouchHelper
- added RedDelete color
- updated frag_queue_item

--- a/EasyLib/app/src/main/res/values/colors.xml
+++ b/EasyLib/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="colorGray">#cccccc</color>
 
     <color name="colorYellow">#ffd416</color>
+    <color name="RedDelete">#f92525</color>
 
     <color name="colorDarkBlueTransparent">#dc212d42</color>
 </resources>
