--- a/EasyLib/app/src/main/res/layout-normal/fragment_queue_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_queue_item.xml
@@ -1,18 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:id="@+id/queue_background"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/RedDelete"
+        android:orientation="horizontal"
+        android:paddingLeft="30dp"
+        android:paddingTop="30dp"
+        android:paddingRight="30dp"
+        android:paddingBottom="20dp">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_weight="0"
+            android:scaleType="fitXY"
+            android:tint="@color/colorWhite"
+            app:srcCompat="@android:drawable/ic_menu_delete" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="2dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/monotype_corsiva"
+            android:text="Delete"
+            android:textColor="@android:color/white"
+            android:textSize="30sp" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/queue_foreground"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:background="@color/colorWhite"
         android:orientation="horizontal"
         android:paddingLeft="30dp"
         android:paddingTop="20dp"
         android:paddingRight="30dp"
-        android:paddingBottom="20dp">
+        android:paddingBottom="20dp"
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/queue_img"
@@ -51,37 +87,6 @@
             android:layout_weight="0"
             android:text="9"
             android:textSize="40sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/queue_background"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/colorGray"
-        android:orientation="horizontal"
-        android:paddingLeft="30dp"
-        android:paddingTop="20dp"
-        android:paddingRight="30dp"
-        android:paddingBottom="20dp">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:layout_weight="0"
-            android:scaleType="fitXY"
-            app:srcCompat="@android:drawable/ic_menu_delete" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:fontFamily="@font/monotype_corsiva"
-            android:text="Delete"
-            android:textSize="30sp" />
     </LinearLayout>
 
 </FrameLayout>
