removed round_rect on login_preference

--- a/EasyLib/app/src/main/res/layout-normal/login_preference.xml
+++ b/EasyLib/app/src/main/res/layout-normal/login_preference.xml
@@ -22,15 +22,13 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="50dp"
-        android:background="@drawable/rect_round_corner"
-        android:foreground="@drawable/rect_round_corner"
         android:clipChildren="true"
         android:clipToPadding="true"
         android:scrollbars="vertical"
         android:scrollbarThumbVertical="@color/colorGray"
         android:scrollbarSize="4dp"
         android:overScrollMode="never"
-        android:backgroundTint="@color/Transparent"
+        android:background="@color/Transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
