Added RoundedImage and updated older ImageView items

--- a/EasyLib/app/src/main/res/layout-normal/fragment_queue_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_queue_item.xml
@@ -49,12 +49,16 @@
         android:paddingRight="30dp"
         android:visibility="visible">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/queue_img"
             android:layout_width="60dp"
             android:layout_height="80dp"
             android:scaleType="fitXY"
-            app:srcCompat="@color/colorPrimary" />
+            android:src="@color/colorPrimary"
+            app:riv_border_color="#333333"
+            app:riv_border_width="2dp"
+            app:riv_corner_radius="3dp"
+            app:riv_mutate_background="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
