--- a/EasyLib/app/src/main/res/values/colors.xml
+++ b/EasyLib/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="RedDelete">#f92525</color>
 
     <color name="colorDarkBlueTransparent">#dc212d42</color>
+    <color name="blackBar">#252525</color>
 </resources>
