--- a/EasyLib/app/src/main/res/drawable/round_rect_shadow.xml
+++ b/EasyLib/app/src/main/res/drawable/round_rect_shadow.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    // Shadow
     <item android:left="5dp" android:top="5dp">
         <shape>
             <solid android:color="#66000000"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
+
+    // Item
     <item>
         <shape>
             <solid android:color="#ffffffff"/>
