--- a/EasyLib/app/src/main/res/layout-normal/fragment_calendar.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_calendar.xml
@@ -11,10 +11,10 @@
     <TextView
         android:id="@+id/textView6"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="32dp"
         android:text="Calendar"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
